<?xml version="1.0"?>
<package format="2">
  <name>twc_application</name>
  <version>0.1.0</version>
  <description>This is the application package for the example tesseract industrial workcell example.</description>

  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author >Levi Armstrong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>twc_msgs</depend>
  <depend>tesseract_msgs</depend>
  <depend>actionlib</depend>
  <depend>tesseract_motion_planners</depend>
  <depend>tesseract_rosutils</depend>
  <depend>tesseract_monitoring</depend>
  <depend>tesseract_command_language</depend>
  <depend>tesseract_environment</depend>
  <depend>tesseract_visualization</depend>

  <exec_depend>tesseract_planning_server</exec_depend>
  <exec_depend>twc_motion_planning</exec_depend>
  <exec_depend>twc_support</exec_depend>
  <exec_depend>tesseract_rviz</exec_depend>

  <export>
  </export>
</package>
