<?xml version="1.0"?>
<package format="2">
  <name>twc_msgs</name>
  <version>0.1.0</version>
  <description>This is the msgs, src and action package for the tesseract industrial workcell example.</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author >Levi Armstrong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>tesseract_msgs</depend>
  <depend>actionlib_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>
